# only-uav

./: .gitignore  README.md  pyproject.toml  run_minimal.py
.cursor/skills/py-docs-sync/: SKILL.md
configs/: config.yaml
configs/algorithm/: a2c.yaml  ppo.yaml  sac.yaml  td3.yaml
configs/algorithm/ding/: ppo.yaml
configs/algorithm/rlib/: a2c.yaml  ddpg.yaml  sac.yaml  td3.yaml
configs/algorithm/sb3/: a2c.yaml  sac.yaml
configs/algorithm/tianshou/: a2c.yaml  ddpg.yaml  ppo.yaml  td3.yaml
configs/algorithm_rllib/: ppo.yaml
configs/algorithm_tianshou/: sac.yaml
configs/experiment/: default.yaml  high_energy_long_train.yaml  local_only.yaml
configs/modules/: default.yaml
configs/modules/action_interpreter/: standard.yaml
configs/modules/channel/: free_space.yaml  interference_limited.yaml  prob_los.yaml  spectrum_sharing.yaml
configs/modules/computing/: edge_offloading.yaml  local_only.yaml  queued_edge.yaml
configs/modules/energy/: energy_harvesting.yaml  finite_battery.yaml  infinite_battery.yaml
configs/modules/env_params/: default.yaml
configs/modules/mobility/: random_waypoint.yaml  simple_point_mass.yaml
configs/modules/observation/: full_obs.yaml  partial_obs.yaml
configs/modules/power/: simple_power.yaml
configs/modules/reward/: constrained.yaml  sparse_completion.yaml  weighted_sum.yaml
configs/modules/task/: poisson_arrival.yaml  trace_driven.yaml
docs/: 架构与使用指南.md  环境与模块说明.md  规划文档.md
onlyuav/: __init__.py  algorithms.py  eval.py  plot.py  train.py
onlyuav/core/: __init__.py  base_component.py  env_builder.py  interfaces.py
onlyuav/envs/: __init__.py  drone_env.py
onlyuav/evaluation/: evaluator.py  metrics.py
onlyuav/models/: __init__.py  action_interpreter.py  channel.py  computing.py  mobility.py  observation.py  power.py  reward.py  task.py
onlyuav/models/action_interpreter/: __init__.py  (+1 more)
onlyuav/rl/: __init__.py  builtin_defaults.py  common.py  di_engine_train.py  ding_bundle.py  hparams.py  registry.py  rllib_train.py  runner.py  sb3_train.py  tianshou_train.py
scripts/: _bootstrap.py  eval.py  nohup_eval_all_sb3.sh  nohup_train_all_sb3.sh  plot.py  train.py  train_and_eval.py
tests/: __init__.py  support.py  test_env.py  test_models.py  test_rl_registry.py
(+23 files in other folders)
